Mon, 12 Nov 2007 20:25:39 +0100 <thp@perli.net>
Improve caching for HTTP redirects and minor errors; cache clean-up

	* src/gpodder/cache.py: Cache content when it comes from a HTTP
	redirect (301, 302, 307); cache feeds even with parsing errors, so we
	can "fill" our cache and not download on every startup
	* src/gpodder/libpodcasts.py: Add cache clean-up code after loading
	channels; this should keep the feedcache.db file smaller for users
	that like to try out new channels (or have used gPodder for a while)

Sun, 11 Nov 2007 14:24:17 +0100 <thp@perli.net>
Better file extension guessing for URLs

	* src/gpodder/util.py: Improve file_extension_from_url() by adding
	additional checks for known good extensions and recurse into the query
	string if it looks like an URL; this should fix compatibility problems
	for feeds with strange URLs; should provide more reliable guessing;
	thanks to Nicolas Quienot <niqooo@gmail.com> for the bug report

Fri, 09 Nov 2007 10:05:36 +0100 <thp@perli.net>
Fix format_filesize() usage in episodes selector and podcastItem

	* src/gpodder/gui.py: Use the correct (config-using) format_filesize()
	function to generate the total size string in the episode selector
	* src/gpodder/libpodcasts.py: Use the correct (config-usig
	format_filesize() function to generate the total size string in
	podcastItem; thanks to Pieter De Decker <pdedecker@gmail.com> for
	pointing that out
	* data/gpodder.glade: Use "Preferences" instead of "Preferences..."
	which feels a bit better in the GUI

Thu, 08 Nov 2007 21:25:19 +0100 <thp@perli.net>
Add "gPodder download folder synchronizer" scripts to repository

	* doc/dev/gdfs/gdfs-check.py: Added
	* doc/dev/gdfs/gdfs-init.py: Added
	* doc/dev/gdfs/README: Added

Thu, 08 Nov 2007 20:01:13 +0100 <thp@perli.net>
The mighty episode selector dialog and some menu re-arrangements

	* src/gpodder/gui.py: Move the "center_on_widget" keyword-based window
	positioning code to GladeWidget to be universally usable; update